--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Room Checklist</title>
     <style>
-        body { font-family: -apple-system, sans-serif; padding: 20px; background-color: #f0f2f5; }
+        body { font-family: -apple-system, sans-serif; padding: 20px; background-color: #f0f2f5; color: #1c1e21; }
         .card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-width: 500px; margin: auto; }
-        h2 { margin-top: 0; color: #1a73e8; border-bottom: 2px solid #eee; padding-bottom: 10px; }
-        .item { display: flex; align-items: flex-start; margin-bottom: 15px; padding: 5px; border-radius: 5px; }
-        .item:active { background-color: #fdfdfd; }
-        input[type="checkbox"] { width: 24px; height: 24px; margin-right: 12px; flex-shrink: 0; cursor: pointer; }
+        h2 { margin-top: 0; color: #1a73e8; border-bottom: 2px solid #e8eaed; padding-bottom: 10px; }
+        .item { display: flex; align-items: flex-start; margin-bottom: 15px; cursor: pointer; }
+        input[type="checkbox"] { width: 24px; height: 24px; margin-right: 12px; cursor: pointer; flex-shrink: 0; }
         label { font-size: 16px; cursor: pointer; line-height: 1.4; }
-        button { background-color: #25D366; color: white; border: none; padding: 18px; width: 100%; border-radius: 8px; font-size: 18px; font-weight: bold; cursor: pointer; margin-top: 15px; }
-        .error-msg { color: #d93025; font-weight: bold; display: none; margin-bottom: 10px; text-align: center; }
+        button { background-color: #25D366; color: white; border: none; padding: 18px; width: 100%; border-radius: 8px; font-size: 18px; font-weight: bold; cursor: pointer; margin-top: 10px; }
+        button:active { background-color: #128C7E; }
+        .info { font-size: 14px; color: #606770; margin-bottom: 20px; }
+        .warning { color: #d93025; font-weight: bold; display: none; margin-bottom: 10px; text-align: center; }
     </style>
 </head>
 <body>
     <div class="card">
         <h2 id="roomTitle">Room ...</h2>
-        <div id="cleanerDisplay" style="color:#666; margin-bottom: 15px;"></div>
+        <div id="cleanerDisplay" class="info"></div>
         <div id="checklist"></div>
-        <div id="error" class="error-msg">⚠️ Please complete ALL items!</div>
+        <div id="errorMsg" class="warning">⚠️ PLEASE CHECK ALL ITEMS!</div>
         <button onclick="sendWhatsApp()">SEND TO WHATSAPP</button>
     </div>
 
     <script>
+        // Data from your original configuration
         const MANAGER_PHONE = "33752025199"; 
         const CLEANERS = [
             { name: "tiron", password: "t123" },
@@ -44,6 +46,7 @@
             "Room fully clean"
         ];
 
+        // 1. Setup Room and Security
         const params = new URLSearchParams(window.location.search);
         const room = params.get('r') || "Unknown";
         document.getElementById('roomTitle').innerText = "Room " + room;
@@ -53,7 +56,7 @@
 
         if (!cleaner) {
             alert("Wrong password!");
-            document.body.innerHTML = "<h2>Access Denied</h2>";
+            document.body.innerHTML = "<h2 style='text-align:center; margin-top:50px;'>Access Denied</h2>";
         } else {
             document.getElementById('cleanerDisplay').innerText = "Cleaner: " + cleaner.name;
             const listDiv = document.getElementById('checklist');
@@ -66,32 +69,33 @@
             });
         }
 
+        // 2. Validation and Messaging
         function sendWhatsApp() {
             let incomplete = false;
-            // CHECK IF EVERYTHING IS TICKED
             CHECKS.forEach((_, i) => {
                 if(!document.getElementById('c'+i).checked) incomplete = true;
             });
 
             if(incomplete) {
-                document.getElementById('error').style.display = 'block';
-                alert("You cannot send the report until all tasks are finished.");
+                document.getElementById('errorMsg').style.display = 'block';
+                alert("You must complete the entire checklist before sending.");
                 return;
             }
 
-            document.getElementById('error').style.display = 'none';
-            
-            // Build message with safe emojis
-            let msg = `✅ Room ${room} - READY\n`;
-            msg += `By: ${cleaner.name}\n`;
-            msg += `Time: ${new Date().toLocaleString()}\n\n`;
-            msg += `Checklist:`;
+            document.getElementById('errorMsg').style.display = 'none';
+
+            // We use (V) instead of ✅ to prevent the [?] error on WhatsApp
+            let msg = "*ROOM " + room + " READY*\n";
+            msg += "By: " + cleaner.name + "\n";
+            msg += "Time: " + new Date().toLocaleString() + "\n\n";
+            msg += "*Checklist Results:*\n";
             
             CHECKS.forEach((text, i) => {
-                msg += `\n${i+1}. [✅] ${text}`;
+                msg += (i+1) + ". (V) " + text + "\n";
             });
 
-            window.location.href = `https://wa.me/${MANAGER_PHONE}?text=${encodeURIComponent(msg)}`;
+            // Standard URL encoding to ensure WhatsApp opens correctly
+            window.location.href = "https://wa.me/" + MANAGER_PHONE + "?text=" + encodeURIComponent(msg);
         }
     </script>
 </body>
