--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@
         // --- 1. DATA SECTION (Modify rooms, cleaners, and passwords here) ---
         const MANAGER_PHONE = "33752025199"; 
         const CLEANERS = [
-            { name: "tiron", password: "t123" },
-            { name: "gayash", password: "g456" }
-        ];
+    {
+        "name": "akhil",
+        "password": "123a"
+    },
+    {
+        "name": "tiron",
+        "password": "456b"
+    },
+    {
+        "name": "maria",
+        "password": "111"
+    }
+];
         const CHECKS = [
             "AC operates correctly; remote & batteries OK",
             "TV operates correctly; remote & batteries OK",
@@ -105,3 +115,4 @@
     </script>
 </body>
 </html>
+
