--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <style>
         body { font-family: sans-serif; padding: 20px; background-color: #f0f2f5; }
         .card { background: white; padding: 25px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); max-width: 400px; margin: auto; }
-        h2 { margin-top: 0; color: #1a73e8; text-align: center; }
-        h3 { text-align: center; color: #606770; margin-bottom: 20px; border-bottom: 1px solid #eee; padding-bottom: 10px; }
+        h2 { margin-top: 0; color: #1a73e8; text-align: center; margin-bottom: 5px; }
+        h3 { text-align: center; color: #606770; margin-top: 0; margin-bottom: 5px; }
+        .staff-tag { text-align: center; color: #1a73e8; font-weight: bold; margin-bottom: 20px; font-size: 14px; text-transform: uppercase; }
         .item { display: flex; align-items: center; margin-bottom: 15px; font-size: 17px; border-bottom: 1px solid #f9f9f9; padding-bottom: 8px; }
         input[type="checkbox"] { width: 28px; height: 28px; margin-right: 15px; cursor: pointer; }
         input[type="password"] { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; box-sizing: border-box; }
@@ -22,7 +23,8 @@
 <body>
     <div class="card" id="app">
         <h2>La Veranda Hotel</h2>
-        <h3 id="roomTitle">Loading...</h3>
+        <h3 id="roomDisplay">Room ...</h3>
+        <div id="staffDisplay" class="staff-tag hidden"></div>
         
         <div id="loginArea" class="hidden">
             <p style="text-align:center;">Enter Staff Password:</p>
@@ -48,12 +50,11 @@
 
         const params = new URLSearchParams(window.location.search);
         const room = params.get('r') || "Unknown";
-        document.getElementById('roomTitle').innerText = "Room " + room;
+        document.getElementById('roomDisplay').innerText = "Room " + room;
 
         let staffData = [];
         let staffName = sessionStorage.getItem('staffName');
 
-        // Fetch staff list silently
         fetch('cleaners.json?v=' + Date.now())
             .then(r => r.json())
             .then(data => {
@@ -79,6 +80,11 @@
         }
 
         function showList() {
+            // Update Header with Staff Name
+            const staffDiv = document.getElementById('staffDisplay');
+            staffDiv.innerText = "Staff: " + staffName;
+            staffDiv.classList.remove('hidden');
+
             const checklistArea = document.getElementById('checklistArea');
             const listDiv = document.getElementById('list');
             checklistArea.classList.remove('hidden');
@@ -114,7 +120,7 @@
                 <div class="success">
                     <h2>REPORT SENT</h2>
                     <p>Redirecting to WhatsApp...</p>
-                    <button onclick="location.reload()" style="background:#1a73e8; color:white; border:none; padding:15px; border-radius:8px; width:100%;">Start New Room</button>
+                    <button onclick="location.reload()" style="background:#1a73e8; color:white; border:none; padding:15px; border-radius:8px; width:100%; cursor:pointer;">Start New Room</button>
                 </div>`;
 
             window.location.href = finalUrl;
