--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <script>
         const CHECKS = [
-            "Previous guest forgot items in the room (Checked)",
+            "Previous guest forgot items in the room",
             "AC operates correctly; remote & batteries OK",
             "TV operates correctly; remote & batteries OK",
             "AC switch ON & taped",
@@ -136,3 +136,4 @@
     </script>
 </body>
 </html>
+
