--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <p id="loginError" style="color:red; display:none; text-align:center;">Wrong Password!</p>
         </div>
         <div id="checklistArea" class="hidden">
-            <p style="font-size: 12px; color: #666; text-align: center; margin-bottom: 15px;">Tap 1: OK (✓) | Tap 2: Found Item/Problem (X)</p>
+            <p style="font-size: 12px; color: #666; text-align: center; margin-bottom: 15px;">Tap 1: OK (✓) | Tap 2: Problem (X)</p>
             <div id="list"></div>
-            <label class="note-label">Problem / Found Items details:</label>
-            <textarea id="notes" placeholder="Describe items or problems here..."></textarea>
+            <label class="note-label">Report Details:</label>
+            <textarea id="notes" placeholder="Fill details here..."></textarea>
             <p id="warn" style="color:red; display:none; text-align:center; font-weight:bold;">⚠️ ALL 11 ITEMS MUST BE MARKED!</p>
             <button id="sendBtn" onclick="send()">SEND TO GROUP</button>
         </div>
@@ -89,14 +89,17 @@
 
         function updateNotesFromStates() {
             let noteArea = document.getElementById('notes');
-            let problems = [];
+            let reports = [];
             itemStates.forEach((state, i) => { 
                 if (state === 2) {
-                    const label = (i === 0) ? "Guest forgot items" : CHECKS[i];
-                    problems.push("Item " + (i + 1) + " (" + label + "): "); 
+                    if (i === 0) {
+                        reports.push("1- The guest has forgot ");
+                    } else {
+                        reports.push("item " + (i + 1) + " issue with " + CHECKS[i] + ": ");
+                    }
                 }
             });
-            noteArea.value = problems.join("\n");
+            noteArea.value = reports.join("\n");
         }
 
         function renderItems() {
@@ -136,4 +139,3 @@
     </script>
 </body>
 </html>
-
