--- a/index.html
+++ b/index.html
@@ -40,22 +40,31 @@
             <div id="list"></div>
             <label class="note-label">Report Details:</label>
             <textarea id="notes" placeholder="Fill details here..."></textarea>
-            <p id="warn" style="color:red; display:none; text-align:center; font-weight:bold;">⚠️ ALL 11 ITEMS MUST BE MARKED!</p>
+            <p id="warn" style="color:red; display:none; text-align:center; font-weight:bold;">⚠️ ALL 20 ITEMS MUST BE MARKED!</p>
             <button id="sendBtn" onclick="send()">SEND TO GROUP</button>
         </div>
     </div>
     <script>
         const CHECKS = [
             "Previous guest forgot items in the room",
+            "Curtains are well attached and functional",
+            "Telephone is in ringing mode",
+            "European adaptor is in an electrical socket",
             "AC operates correctly; remote & batteries OK",
             "TV operates correctly; remote & batteries OK",
-            "AC switch ON & taped",
+            "AC switch is ON & taped",
             "Mini-fridge switch ON & taped",
-            "Windows & balcony door close & lock",
-            "Safe empty & left open",
-            "All lighting & toilet fan operational",
-            "Bathroom equipment OK (No leaks)",
-            "Towels correct; hair dryer OK",
+            "Windows & balcony door close & lock properly",
+            "Safe box is empty & open",
+            "All lighting are ok",
+            "Toilet fan is operational",
+            "WC seat cover well fixed",
+            "Shower flexible not leaking",
+            "Shower glass door open and close properly",
+            "Towels correct and linen OK",
+            "Soap are full",
+            "Amenities are correct",
+            "Hair dryer OK",
             "Room fully clean & smelling fresh"
         ];
 
