--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             "European adaptor is in an electrical socket",
             "AC operates correctly; remote & batteries OK",
             "TV operates correctly; remote & batteries OK",
-            "AC switch is ON & taped",
+            "AC switch is ON & taped (both units in suites)",
             "Mini-fridge switch ON & taped",
             "Windows & balcony door close & lock properly",
             "Safe box is empty & open",
@@ -148,3 +148,4 @@
     </script>
 </body>
 </html>
+
