--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <p id="loginError" style="color:red; display:none; text-align:center;">Wrong Password!</p>
         </div>
         <div id="checklistArea" class="hidden">
-            <p style="font-size: 12px; color: #666; text-align: center; margin-bottom: 15px;">Tap 1: OK (✓) | Tap 2: Problem (X)</p>
+            <p style="font-size: 12px; color: #666; text-align: center; margin-bottom: 15px;">Tap 1: OK (✓) | Tap 2: Issue (X)</p>
             <div id="list"></div>
-            <label class="note-label">Problem Details:</label>
+            <label class="note-label">Report Details:</label>
             <textarea id="notes" placeholder="Fill details here..."></textarea>
             <p id="warn" style="color:red; display:none; text-align:center; font-weight:bold;">⚠️ ALL 20 ITEMS MUST BE MARKED!</p>
             <button id="sendBtn" onclick="send()">SEND TO GROUP</button>
@@ -152,7 +152,10 @@
             const now = new Date();
             let msg = "LA VERANDA HOTEL\nROOM " + room + " " + (hasProblem ? "CHECK NOTE" : "READY") + "\n";
             msg += "Staff: " + staffName + "\nDate: " + now.toLocaleDateString() + "\nTime: " + now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' }) + "\n";
-            msg += "Problem: " + (noteText || "All is good");
+            
+            // "Notes:" on a new line logic
+            msg += "Notes:\n" + (noteText || "All is good");
+            
             window.location.href = "https://wa.me/?text=" + encodeURIComponent(msg);
             sessionStorage.clear();
             document.getElementById('app').innerHTML = `<div class="success"><h2>REPORT SENT</h2><p>Logged out.</p><button onclick="location.reload()" style="background:#1a73e8; color:white; border:none; padding:15px; border-radius:8px; width:100%;">New Room</button></div>`;
