--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             "All lighting are ok", "Toilet fan is operational",
             "WC seat cover well fixed", "Shower flexible not leaking",
             "Shower glass door open and close properly", "Towels correct and linen OK",
-            "Soap are full", "Amenities are correct",
+            "Soap are full in shower and lavatory", "Amenities are correct",
             "Hair dryer OK", "Room fully clean & smelling fresh"
         ];
 
@@ -171,3 +171,4 @@
     </script>
 </body>
 </html>
+
