--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             "Previous guest forgot items in the room", "Curtains are well attached and functional",
             "Telephone is in ringing mode", "European adaptor is in an electrical socket",
             "AC operates correctly; remote & batteries OK", "TV operates correctly; remote & batteries OK",
-            "AC switch is ON & taped", "Mini-fridge switch ON & taped",
+            "AC switch is ON & taped (qty. 1 or2", "Mini-fridge switch ON & taped",
             "Windows & balcony door close & lock properly", "Safe box is empty & open",
             "All lighting are ok", "Toilet fan is operational",
             "WC seat cover well fixed", "Shower flexible not leaking",
@@ -171,4 +171,5 @@
     </script>
 </body>
 </html>
+
 
