--- a/welcome.html
+++ b/welcome.html
@@ -279,7 +279,7 @@
         msg += "- Restaurant Dial: 01\n";
         
         msg += "\nGOOGLE MAPS LOCATION:\n";
-        msg += "https://www.google.com/maps?q=34.892751,33.635221";
+        msg += "https://www.google.com/maps?q=34.8926998,33.6351884";
 
         if(taxiChoice.value === "yes") {
             msg += "\nTAXI REQUESTED:\n";
