--- a/welcome.html
+++ b/welcome.html
@@ -179,7 +179,7 @@
         <div class="map-section">
             <label style="color:#1a73e8;" class="input-label">Hotel Location</label>
             <p style="font-size:14px; margin:5px 0;">Michael Aggelou 3, Larnaka</p>
-            <a href="https://www.google.com/maps?q=34.892668, 33.635202" target="_blank" class="map-btn">Open Google Maps</a>
+            <a href="https://www.google.com/maps?q=34.89275006487958, 33.635186995741975" target="_blank" class="map-btn">Open Google Maps</a>
         </div>
 
         <button id="sendBtn" onclick="send()">CONFIRM & SEND</button>
