--- a/welcome.html
+++ b/welcome.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/YOUR_EXEC_URL_HERE/exec">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>La Veranda Hotel - Loading...</title>
   <script type="text/javascript">
-    // Optional: Also redirect using JavaScript for faster response
-    window.location.href = "https://script.google.com/macros/s/YOUR_EXEC_URL_HERE/exec" + window.location.search;
+    /**
+     * REDIRECT LOGIC
+     * This script takes the visitor from GitHub to the functional Google Script.
+     */
+    (function() {
+      // 1. Your specific Google Apps Script Web App URL
+      const googleWebAppUrl = "https://script.google.com/macros/s/AKfycbxxBIxAsdzDlEEEbf6f2EiVb11qyu_wJy9figzIbOo-4G1jPg_Rto-ihIU_ytnd-LXr-Q/exec";
+
+      // 2. Capture any parameters like ?room=110 from the QR code
+      const queryString = window.location.search;
+
+      // 3. Immediate redirect
+      window.location.replace(googleWebAppUrl + queryString);
+    })();
   </script>
+  <style>
+    body { 
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+      display: flex; 
+      flex-direction: column;
+      align-items: center; 
+      justify-content: center; 
+      height: 100vh; 
+      margin: 0; 
+      background-color: #f4f7f9;
+      color: #1a73e8;
+    }
+    .loader {
+      border: 5px solid #f3f3f3;
+      border-top: 5px solid #1a73e8;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin-bottom: 20px;
+    }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    p { font-weight: bold; font-size: 18px; }
+  </style>
 </head>
 <body>
-  <p>Redirecting to La Veranda Welcome Page...</p>
+  <div class="loader"></div>
+  <p>Connecting to La Veranda Guest Welcome...</p>
 </body>
 </html>
